--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,21 @@
 # export $(cat .env.example | grep -v "#" | xargs)
 
 MARIADB_HOST=127.0.0.1
-MARIADB_PORT=3306
+MARIADB_PORT=3307
 MARIADB_USER=fpv_v2008
 MARIADB_PASSWORD=password
 MARIADB_DATABASE=fpv_v2008
 MARIADB_CHARSET=utf8mb4
 MARIADB_ROOT_PASSWORD_FILE=/run/secrets/password
+
+AUTH0_DOMAIN=
+AUTH0_CLIENT_ID=
+AUTH0_CLIENT_SECRET=
+AUTH0_TOKEN_ALGORITHM=RS256
+
+MAIL_MAILER=smtp
+MAIL_HOST=v2008.coreserver.jp
+MAIL_PORT=587
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=tls
