--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "slim/slim": "^4.12",
         "symfony/cache": "^6.4",
         "uma/dic": "^3.0",
-        "vlucas/phpdotenv": "^5.6"
+        "vlucas/phpdotenv": "^5.6",
+        "webonyx/graphql-php": "^15.9"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.6",
