--- a/.env.example
+++ b/.env.example
@@ -15,8 +15,14 @@ AUTH0_CLIENT_SECRET=
 AUTH0_TOKEN_ALGORITHM=RS256
 
 MAIL_MAILER=smtp
-MAIL_HOST=v2008.coreserver.jp
-MAIL_PORT=587
+MAIL_AUTH=true
+MAIL_HOST=
 MAIL_USERNAME=
 MAIL_PASSWORD=
+MAIL_PORT=587
 MAIL_ENCRYPTION=tls
+MAIL_SENDER=
+
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
