--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "php": "~8.1.0",
         "ext-json": "*",
         "auth0/auth0-php": "^8.10",
+        "aws/aws-sdk-php": "^3.298",
         "cloudinary/cloudinary_php": "^2.12",
         "doctrine/orm": "^2.17",
         "fakerphp/faker": "^1.23",
