--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@ AUTH0_CLIENT_ID=
 MAIL_HOST=
 MAIL_USERNAME=
 MAIL_PASSWORD=
-MAIL_SENDER=
+MAIL_ENV=
 
 CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
@@ -23,3 +23,4 @@ CLOUDINARY_API_SECRET=
 
 WASABI_API_KEY=
 WASABI_API_SECRET=
+WASABI_CONFIG_FILE=
